# finalgit

./: .editorconfig  .eslintrc.json  .gitignore  .pre-commit-config.yaml  404.html  README.md  biome.jsonc  components.json  eslint.config.js  i18next-parser.config.js  index.html  mkdocs.yml  next.config.js  next.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  sitemap.xml  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsr.config.json  update-shadcn.sh  vite.config.ts
src/: App.tsx  Cargo.toml  app.tsx  i18n.ts  language-map.json  locales.ts  main.tsx  middleware.ts  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/bindings/: index.ts
src-tauri/capabilities/: default.json
src-tauri/src/: bisect.rs  blame.rs  branch.rs  cherry_pick.rs  commit.rs  config.rs  error.rs  ext.rs  file.rs  head.rs  lib.rs  main.rs  rebase.rs  remote.rs  stage.rs  stash.rs  state.rs  statistics.rs  ty.rs  utils.rs
src-tauri/src/state/: branch.rs  commits.rs  files.rs  tag.rs
src-tauri/tauri_derive/: Cargo.toml
src-tauri/tauri_derive/src/: lib.rs
src/app/: __root.tsx  layout.tsx  page.tsx
src/app/[locale]/: layout.tsx  page.tsx
src/app/diff/: layout.tsx  page.tsx
src/app/filetree/: $commit.tsx  layout.tsx  page.tsx
src/app/main/: layout.tsx  page.tsx
src/app/settings/: ai.tsx  git.tsx  layout.tsx  page.tsx
src/app/ui/: app.tsx
src/assets/: codemirror.css  global.css
src/components/: Icon.tsx  Nav.tsx  editBranch.tsx  editTag.tsx  edit_branch.tsx  edit_tag.tsx  icon.tsx  modeToggle.tsx  na.tsx
src/components/devtools/: query-devtools.tsx  router-devtools.tsx
src/components/ext/: autocomplete.stories.tsx  autocomplete.tsx  autosize-textarea.tsx  avatar-group.tsx  collapse-group.stories.tsx  collapse-group.tsx  copy-button.tsx  tooltip.tsx
src/components/ui/: accordion.tsx  avatar.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  input.tsx  popover.tsx  resizable.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  sonner.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx  toggle.tsx
src/extensions/: Blame.tsx  BlameCard.tsx  BoolCheckbox.tsx  blame.tsx
src/hooks/: bisect.ts  gh.ts  query.ts  state.ts  use-bisect.ts  use-query.ts  use-store.ts
src/i18n/: index.ts  request.ts  routing.ts  zh_CN.json
src/lib/: ai.ts  api.ts  branch.d.ts  error.ts  file_status.ts  files.d.ts  gh.ts  git.ts  gitFileStatus.ts  languageMap.ts  locales.ts  notify.ts  notify.tsx  operator.ts  query.ts  state.ts  string2color.ts  stringColor.ts  style.ts  use-xterm.ts  use-xterm.tsx
src/lib/ai/: index.ts  ollama.ts
src/lib/guide/: index.ts  jetbrains.test.ts  jetbrains.ts  vscode.test.ts  vscode.ts
src/lib/parser/: Makefile  commit-filter.test.ts  commit-filter.ts  commitFilter.test.ts  commitFilter.ts  parser.test.ts  parser.ts
src/locales/: index.ts
src/locales/cn/: translation.json
src/locales/en_US/: license-card.json  stage.json  translation.json
src/locales/zh_CN/: copy-button.json  license-card.json  stage.json  translation.json
src/parser/: commitFilter.test.ts  commitFilter.ts  parser.test.ts  parser.ts  reversion.g4  reversionLexer.ts  reversionListener.ts  reversionParser.ts  reversionRules.g4  reversionVisitor.ts
src/parser/impl/: reversion.interp  reversion.tokens  reversionLexer.interp  reversionLexer.tokens  reversionLexer.ts  reversionListener.ts  reversionParser.ts  reversionVisitor.ts
src/routes/: __root.tsx  commit.tsx  file_content.lazy.tsx  filetree.lazy.tsx  index.lazy.tsx  index.tsx  settings.tsx  status.lazy.tsx
src/routes/settings/: ai.tsx  git.tsx  profile.tsx
src/src/: action.rs  app.rs  branch.rs  checkout.rs  command_context.rs  common.rs  diff.rs  error.rs  lib.rs  list.rs  main.rs  server.rs  tag.rs
src/stories/: Branch.stories.tsx  Branch.tsx  BranchCard.stories.tsx  BranchCard.tsx  BranchList.stories.tsx  BranchList.tsx  BranchPanel.stories.tsx  BranchPanel.tsx  ChangeCard.stories.tsx  ChangeCard.tsx  Commiter.stories.tsx  Commiter.tsx  ControlPanel.stories.tsx  ControlPanel.tsx  ErrorSonner.tsx  FilePanel.tsx  MainPanel.stories.tsx  MainPanel.tsx  Nav.stories.tsx  Nav.tsx  Project.stories.tsx  Project.tsx  Tag.stories.tsx  Tag.tsx  TagList.stories.tsx  TagList.tsx  WorkspacePanel.stories.tsx  WorkspacePanel.tsx  workspacePanel.stories.tsx  workspacePanel.tsx  workspace_panel.stories.tsx  workspace_panel.tsx
(+355 files in other folders)
