[package]
name = "finalgit"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "finalgit_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
strip = true

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2.0.3"
tauri-plugin-log = { version = "2.2.0", features = ["colored"] }
tauri-plugin-clipboard-manager = "2.2.0"
tauri-plugin-store = "2.2.0"
tauri-plugin-fs = { version = "2.2.0", features = ["watch"] }
tauri-plugin-os = "2"

specta = { version = "=2.0.0-rc.22" }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta-typescript = "0.0.9"

tauri_derive = { path = "./tauri_derive" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
git2 = "0.20.0"
anyhow = "1.0.95"
thiserror = "2.0.9"
itertools = "0.14.0"
log = "0.4.22"
filetime = "0.2.25"
glob-match = "0.2.1"
semver = "1.0.24"
clap = { version = "4.5.23", features = ["derive"] }
chrono = "0.4.39"
tokio = { version = "1.42.0", features = ["full"] }
