[package]
name = "gitserver"
version = "0.1.0"
description = "A git client server"
authors = ["loongtao.zhang"]
license = ""
repository = ""
default-run = "gitserver"
edition = "2021"
rust-version = "1.60"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
git2 = "0.19.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.86"
thiserror = "1.0.63"
itertools = "0.13.0"
